; ModuleID = '/home/carl/AnghaBench/mpv/input/extr_ipc-win.c_ipc_start_client.c'
source_filename = "/home/carl/AnghaBench/mpv/input/extr_ipc-win.c_ipc_start_client.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_ipc_ctx = type { i32 }
%struct.client_arg = type { i32, i32, i32, i32 }

@client_thread = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mp_ipc_ctx*, %struct.client_arg*)* @ipc_start_client to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipc_start_client(%struct.mp_ipc_ctx* %0, %struct.client_arg* %1) #0 {
  %3 = alloca %struct.mp_ipc_ctx*, align 8
  %4 = alloca %struct.client_arg*, align 8
  %5 = alloca i32, align 4
  store %struct.mp_ipc_ctx* %0, %struct.mp_ipc_ctx** %3, align 8
  store %struct.client_arg* %1, %struct.client_arg** %4, align 8
  %6 = load %struct.mp_ipc_ctx*, %struct.mp_ipc_ctx** %3, align 8
  %7 = getelementptr inbounds %struct.mp_ipc_ctx, %struct.mp_ipc_ctx* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.client_arg*, %struct.client_arg** %4, align 8
  %10 = getelementptr inbounds %struct.client_arg, %struct.client_arg* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @mp_new_client(i32 %8, i32 %11)
  %13 = load %struct.client_arg*, %struct.client_arg** %4, align 8
  %14 = getelementptr inbounds %struct.client_arg, %struct.client_arg* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load %struct.client_arg*, %struct.client_arg** %4, align 8
  %16 = getelementptr inbounds %struct.client_arg, %struct.client_arg* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @mp_client_get_log(i32 %17)
  %19 = load %struct.client_arg*, %struct.client_arg** %4, align 8
  %20 = getelementptr inbounds %struct.client_arg, %struct.client_arg* %19, i32 0, i32 2
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* @client_thread, align 4
  %22 = load %struct.client_arg*, %struct.client_arg** %4, align 8
  %23 = call i64 @pthread_create(i32* %5, i32* null, i32 %21, %struct.client_arg* %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %36

25:                                               ; preds = %2
  %26 = load %struct.client_arg*, %struct.client_arg** %4, align 8
  %27 = getelementptr inbounds %struct.client_arg, %struct.client_arg* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @mpv_destroy(i32 %28)
  %30 = load %struct.client_arg*, %struct.client_arg** %4, align 8
  %31 = getelementptr inbounds %struct.client_arg, %struct.client_arg* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @CloseHandle(i32 %32)
  %34 = load %struct.client_arg*, %struct.client_arg** %4, align 8
  %35 = call i32 @talloc_free(%struct.client_arg* %34)
  br label %36

36:                                               ; preds = %25, %2
  ret void
}

declare dso_local i32 @mp_new_client(i32, i32) #1

declare dso_local i32 @mp_client_get_log(i32) #1

declare !callback !2 dso_local i64 @pthread_create(i32*, i32*, i32, %struct.client_arg*) #1

declare dso_local i32 @mpv_destroy(i32) #1

declare dso_local i32 @CloseHandle(i32) #1

declare dso_local i32 @talloc_free(%struct.client_arg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
